Fixed layout bug in forums (close #55)

--- a/assets/sass/_forums.scss
+++ b/assets/sass/_forums.scss
@@ -1,5 +1,5 @@
 .forum-entries {
-    margin-bottom: emCalc(32px);   
+    margin-bottom: emCalc(32px);
 }
 
 .forum-entries.forum-entries-sticky {
@@ -12,45 +12,54 @@
     @include grid-row();
     padding-top: emCalc(5px);
     padding-bottom: emCalc(5px);
-    
+
     /* Common rules */
     .forum-entry-title {
-        @include grid-column(6);
-        
+
+        @media #{$screen} {
+            @include grid-column(12);
+        }
+        @media #{$small} {
+            @include grid-column(6);
+        }
+
         min-height: emCalc(29px); /* 24 + 5 */
-        padding-left: emCalc(64px);
-        
+
+        // The following property is set to !important in order to not be
+        // overriten by the responsive rules
+        padding-left: emCalc(64px) !important;
+
         background-position: emCalc(24px) emCalc(5px);
         background-repeat: no-repeat;
-        
+
         p {
             margin: 0;
             padding: 0;
         }
-        
+
         background-image: url("../img/forums-normal.png");
     }
-    
+
     .forum-entry-title.unread {
         background-image: url("../img/forums-unread.png");
     }
-    
+
     .forum-entry-count {
         @include grid-column(1);
         @extend .hide-for-small;
         text-align: center;
-        
+
         span {
             width: 100%;
             display: block;
         }
     }
-    
+
     .forum-entry-desc {
         @include grid-column(5, true);
         @extend .hide-for-small;
         //line-height: emCalc(14px);
-        
+
         p {
             margin: 0;
             padding: 0;
@@ -73,12 +82,12 @@
 .post-head {
     margin-top: emCalc(10px);
     margin-bottom: emCalc(10px);
-    
+
     background-color: rgb(245, 245, 245);
     border-top: 1px solid rgb(221, 221, 221);
-    
+
     padding: 3px;
-    
+
     p {
         padding: 0;
         margin: 0;
